--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/media-q1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -20,18 +19,23 @@
     <title>xchange</title>
 </head>
 <body>
+    <div class="e80" >
+        <img src="img/blob-.svg" alt="">
+    </div>
     <!-- container -->
     <div class="container">
         <div class="backround-c">
             <header>
-                <div class="logo-d"><img src="resource/logo.png" alt=""></div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-                  <div class="button-g bt">Get Started</div>
+                <div class="logo-d"><img src="img/logo.png" alt=""></div>
+                <div class="left-hdr">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                      </ul>
+                      <div class="button-g bt">Get Started</div>
+                </div>
             </header>
             <!-- content 1 -->
             <section id="content1" data-aos="fade-up">
@@ -47,7 +51,7 @@
                     <div class="bc1">
                         <div class="gets bt">
                             <p>Purchase Now</p> 
-                            <img src="resource/arrowl.svg" alt="">
+                            <img src="img/arrowl.svg" alt="">
                         </div>
                         <div class="lears  bt">
                             <p>Learn More</p>
@@ -55,12 +59,10 @@
                     </div>
                 </div>
                 <div class="c2">
-                    <img src="resource/img1.svg" alt="">
+                    <img src="img/img1.svg" alt="">
                 </div>
             </section>
         </div>
-        
-        
         <!-- content 2 -->
         <section id="content2" data-aos="fade-up">
             <h2>What makes <span style="color: #FA47D8;"> boostashop</span> better?</h2>
@@ -71,20 +73,20 @@
         <section id="content3" data-aos="fade-up">
             <!-- box 1 -->
             <div class="c3-box">
-                <div class="img3"><img src="resource/c3p.svg" alt=""></div>
-                <h2 style="margin-right: 50px;">Warrenty With Purchase</h2>
+                <div class="img3"><img src="img/c3p.svg" alt=""></div>
+                <h2 >Warrenty With Purchase</h2>
                 <p>All purchases come with full warranty, so If you have any issues contact us.</p>
             </div>
             <!-- box 2 -->
             <div class="c3-box">
-                <div class="img3"><img src="resource/archive.svg" alt=""></div>
-                <h2 style="margin-right: 100px;">Automated System</h2>
+                <div class="img3"><img src="img/archive.svg" alt=""></div>
+                <h2 >Automated System</h2>
                 <p>Our service is completed automated grab your boosts whenever you need.</p>
             </div>
             <!-- box 3 -->
             <div class="c3-box">
-                <div class="img3"><img src="resource/trade.svg" alt=""></div>
-                <h2 style="margin-right: 140px;">Cheapest Prices</h2>
+                <div class="img3"><img src="img/trade.svg" alt=""></div>
+                <h2>Cheapest Prices</h2>
                 <p>We offer the cheapest prices you’ll ever find and all that without any loss of quality.</p>
             </div>
         </section>
@@ -102,7 +104,7 @@
                 <!-- box 1 -->
                 <div id="box1" class="price-box">
                     <div class="priceimg">
-                        <img src="resource/Group 1000002189.svg" alt="">
+                        <img src="img/Group 1000002189.svg" alt="">
                     </div>
                     <div class="price-content">
                         <h3 class="t-up">4 Discord Server Boosts</h3>
@@ -113,27 +115,27 @@
                         </div>
                         <h3 class="include">What’s included</h3>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">2 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                     </div>
                     <div class="purshase-now">
                         <a href="#">Purchase Now</a>
-                        <img src="resource/arrowl.svg" alt="">
+                        <img src="img/arrowl.svg" alt="">
                     </div>
                 </div>
                 <!-- box 2 -->
                 <div id="box2" class="price-box">
                     <div class="priceimg">
-                        <img src="resource/Group 1000002189.svg" alt="">
+                        <img src="img/Group 1000002189.svg" alt="">
                     </div>
                     <div class="price-content">
                         <h3 class="t-up">4 Discord Server Boosts</h3>
@@ -144,27 +146,27 @@
                         </div>
                         <h3 class="include">What’s included</h3>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                     </div>
                     <div class="purshase-now">
                         <a href="#">Purchase Now</a>
-                        <img src="resource/arrowl.svg" alt="">
+                        <img src="img/arrowl.svg" alt="">
                     </div>
                 </div>
                 <!-- box 3 -->
                 <div id="box3" class="price-box">
                     <div class="priceimg">
-                        <img src="resource/Group 1000002189.svg" alt="">
+                        <img src="img/Group 1000002189.svg" alt="">
                     </div>
                     <div class="price-content">
                         <h3 class="t-up">8 Discord Server Boosts</h3>
@@ -175,27 +177,27 @@
                         </div>
                         <h3 class="include">What’s included</h3>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                     </div>
                     <div class="purshase-now">
                         <a href="#">Purchase Now</a>
-                        <img src="resource/arrowl.svg" alt="">
+                        <img src="img/arrowl.svg" alt="">
                     </div>
                 </div>
                 <!-- box 4 -->
                 <div id="box4" class="price-box">
                     <div class="priceimg">
-                        <img src="resource/Group 1000002189.svg" alt="">
+                        <img src="img/Group 1000002189.svg" alt="">
                     </div>
                     <div class="price-content">
                         <h3 class="t-up">14 Discord Server Boosts</h3>
@@ -206,21 +208,21 @@
                         </div>
                         <h3 class="include">What’s included</h3>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                         <div class="check-items">
-                            <img src="resource/check.svg" alt="">
+                            <img src="img/check.svg" alt="">
                             <p class="check-p">3 Months Server Boosting</p>
                         </div>
                     </div>
                     <div class="purshase-now">
                         <a href="#">Purchase Now</a>
-                        <img src="resource/arrowl.svg">
+                        <img src="img/arrowl.svg">
                     </div>
                 </div>
             </div>
@@ -309,11 +311,11 @@
             <div class="container py-6">
                 <div class="flex flex-col items-center justify-between mt-6 md:flex-row">
                     <div>
-                        <img src="resource/logo.png" alt="">
+                        <img src="img/logo.png" alt="">
                     </div>
-                                    <img src="resource/cash.svg" alt="" class="">
-                            <img src="resource/cardpayment.svg" alt="">
-                            <img src="resource/crypto.svg" alt="">
+                                    <img src="img/cash.svg" alt="" class="">
+                            <img src="img/cardpayment.svg" alt="">
+                            <img src="img/crypto.svg" alt="">
                 </div>                
                 <hr class="h-px mt-6 bg-gray-200 border-none dark:bg-gray-700">
                 <h5 class="text-center text-[#4D404D]">Copyright © 2022 BOOSTASHOP | All Rights Reserved </h5>
